# SDL_mask

./: .README.md.swp  CMakeLists.txt  README.md
example/: example.c
include/: .SDL_mask.h.swp  SDL_mask.h
src/: .SDL_mask_priv.h.swp  SDL_mask.c  SDL_mask_priv.h
test/: .test.c.swp  test.c
